--- a/pdf.html
+++ b/pdf.html
@@ -78,9 +78,8 @@
     </div>
   </div>
 </body>
-<script type="text/javascript" src="form-selizer.js"></script>
+    <script type="text/javascript" src="form-selizer.js"></script>
     <script type="text/javascript" src="./spec/Scanner-spec.js"></script>
-
-
+    <script type="text/javascript" src="./pdf.js"></script>
 
 </html>
