完成单选题测试

--- a/pdf.html
+++ b/pdf.html
@@ -78,8 +78,12 @@
     </div>
   </div>
 </body>
+
+<script type="text/javascript" src='singlechoice.js'></script>
+<script type="text/javascript" src="./spec/singlechoice-spec.js"></script>
     <script type="text/javascript" src="form-selizer.js"></script>
     <script type="text/javascript" src="./spec/Scanner-spec.js"></script>
-    <script type="text/javascript" src="./pdf.js"></script>
+
+
 
 </html>
