--- a/pdf.html
+++ b/pdf.html
@@ -78,12 +78,12 @@
     </div>
   </div>
 </body>
-    <script type="text/javascript" src="addblank.js"></script>
+    <script type="text/javascript" src="./module/addblank.js"></script>
     <script type="text/javascript" src="./spec/addblank-spec.js"></script>
-    <script type="text/javascript" src='manyChoice.js'></script>
+    <script type="text/javascript" src='./module/manyChoice.js'></script>
     <script type="text/javascript" src='./spec/manyChoice-spec.js'></script>
-    <script type="text/javascript" src='singlechoice.js'></script>
+    <script type="text/javascript" src='./module/singlechoice.js'></script>
     <script type="text/javascript" src="./spec/singlechoice-spec.js"></script>
-    <script type="text/javascript" src="form-selizer.js"></script>
+    <script type="text/javascript" src="./module/form-selizer.js"></script>
     <script type="text/javascript" src="./spec/Scanner-spec.js"></script>
 </html>
