--- a/pdf.html
+++ b/pdf.html
@@ -30,6 +30,7 @@
 
     <div class="d_2">
         <br>
+        <form>
     <h3 align="left">一、     填空题</h3>
     <h4>1.uml的中文全称是:<input type="text" name="1_1"/></h4>
     <h4>2.对象最突出的特征是:<input type="text" name="1_2_1"/> <input type="text" name="1_2_2"/> <input type="text" name="1_2_3"/></h4>
@@ -73,17 +74,32 @@
     <h3 align="left">五、     简 答 题 ( 每 题 4 分 , 共 20 分 )</h3>
     <h4>1. 简述什么是模型以及模型的表现形式?</h4>
     <textarea name="5_1" rows="3" cols="20"></textarea>
+  </form>
         <input type="submit" name="提交" id="submit"/>
         </div>
     </div>
   </div>
 </body>
+
+
+    <script type="text/javascript" src='answers.js'>
+
+    </script>
     <script type="text/javascript" src="./module/addblank.js"></script>
-    <script type="text/javascript" src="./spec/addblank-spec.js"></script>
+    <!--<script type="text/javascript" src="./spec/addblank-spec.js"></script>-->
     <script type="text/javascript" src='./module/manyChoice.js'></script>
-    <script type="text/javascript" src='./spec/manyChoice-spec.js'></script>
+    <!--<script type="text/javascript" src='./spec/manyChoice-spec.js'></script>-->
     <script type="text/javascript" src='./module/singlechoice.js'></script>
-    <script type="text/javascript" src="./spec/singlechoice-spec.js"></script>
+    <!--<script type="text/javascript" src="./spec/singlechoice-spec.js"></script>-->
     <script type="text/javascript" src="./module/form-selizer.js"></script>
-    <script type="text/javascript" src="./spec/Scanner-spec.js"></script>
+    <!--<script type="text/javascript" src="./spec/Scanner-spec.js"></script>-->
+    <script type="text/javascript" src='./module/totalscore.js'>
+
+    </script>
+    <script type="text/javascript" src='differentquestion.js'>
+
+    </script>
+    <script type="text/javascript" src='./module/pdf.js'>
+
+    </script>
 </html>
