change differentquestion class

--- a/pdf.html
+++ b/pdf.html
@@ -82,24 +82,31 @@
 </body>
 
 
-    <script type="text/javascript" src='answers.js'>
+    <!--<script type="text/javascript" src='answers.js'>
 
-    </script>
+    </script>-->
+
     <script type="text/javascript" src="./module/addblank.js"></script>
-    <!--<script type="text/javascript" src="./spec/addblank-spec.js"></script>-->
+    <script type="text/javascript" src="./spec/addblank-spec.js"></script>
     <script type="text/javascript" src='./module/manyChoice.js'></script>
-    <!--<script type="text/javascript" src='./spec/manyChoice-spec.js'></script>-->
+    <script type="text/javascript" src='./spec/manyChoice-spec.js'></script>
     <script type="text/javascript" src='./module/singlechoice.js'></script>
-    <!--<script type="text/javascript" src="./spec/singlechoice-spec.js"></script>-->
+    <script type="text/javascript" src="./spec/singlechoice-spec.js"></script>
     <script type="text/javascript" src="./module/form-selizer.js"></script>
-    <!--<script type="text/javascript" src="./spec/Scanner-spec.js"></script>-->
-    <script type="text/javascript" src='./module/totalscore.js'>
+    <script type="text/javascript" src="./spec/Scanner-spec.js"></script>
+    <script type="text/javascript" src="./module/differentquestion.js">
 
     </script>
-    <script type="text/javascript" src='differentquestion.js'>
+    <script type="text/javascript" src="./spec/differentquestions-spec.js">
 
     </script>
-    <script type="text/javascript" src='./module/pdf.js'>
-
-    </script>
+    <!--<script type="text/javascript" src='./module/totalscore.js'>
+    //
+    // </script>
+    // <script type="text/javascript" src='differentquestion.js'>
+    //
+    // </script>
+    // <script type="text/javascript" src='./module/pdf.js'>
+    //
+    // </script>-->
 </html>
