--- a/pdf.html
+++ b/pdf.html
@@ -28,9 +28,11 @@
     <font size="5">班级：<input type="text" name="class"/>学号：<input type="text" autocomplete="off" name="num" id="Snum">姓名：<input type="text" name="name"/></font>
     </div>
 
+    <form>
+
     <div class="d_2">
         <br>
-        <form>
+
     <h3 align="left">一、     填空题</h3>
     <h4>1.uml的中文全称是:<input type="text" name="1_1"/></h4>
     <h4>2.对象最突出的特征是:<input type="text" name="1_2_1"/> <input type="text" name="1_2_2"/> <input type="text" name="1_2_3"/></h4>
@@ -69,12 +71,12 @@
     <h4>1.用例图只是用于和客户交流和沟通的,用于确定需求。 <input type="text" name="4_1"/></h4>
     <h4>2. 在状态图中,终止状态在一个状态图中允许有任意多个。<input type="text" name="4_2"/></h4>
     </div>
-
+</form>
     <div class="d_6">
     <h3 align="left">五、     简 答 题 ( 每 题 4 分 , 共 20 分 )</h3>
     <h4>1. 简述什么是模型以及模型的表现形式?</h4>
     <textarea name="5_1" rows="3" cols="20"></textarea>
-  </form>
+
         <input type="submit" name="提交" id="submit"/>
         </div>
     </div>
@@ -82,31 +84,25 @@
 </body>
 
 
-    <!--<script type="text/javascript" src='answers.js'>
-
-    </script>-->
+<script type="text/javascript" src='./module/manyChoice.js'></script>
+<!-- // <script type="text/javascript" src='./spec/manyChoice-spec.js'></script> -->
+<script type="text/javascript" src='./module/singlechoice.js'></script>
+<!-- // <script type="text/javascript" src="./spec/singlechoice-spec.js"></script> -->
 
     <script type="text/javascript" src="./module/addblank.js"></script>
-    <script type="text/javascript" src="./spec/addblank-spec.js"></script>
-    <script type="text/javascript" src='./module/manyChoice.js'></script>
-    <script type="text/javascript" src='./spec/manyChoice-spec.js'></script>
-    <script type="text/javascript" src='./module/singlechoice.js'></script>
-    <script type="text/javascript" src="./spec/singlechoice-spec.js"></script>
+    <!-- // <script type="text/javascript" src="./spec/addblank-spec.js"></script> -->
+  
+    <script type="text/javascript" src='./module/answers.js'>
+
+    </script>
     <script type="text/javascript" src="./module/form-selizer.js"></script>
-    <script type="text/javascript" src="./spec/Scanner-spec.js"></script>
-    <script type="text/javascript" src="./module/differentquestion.js">
+    <!-- // <script type="text/javascript" src="./spec/Scanner-spec.js"></script> -->
 
-    </script>
-    <script type="text/javascript" src="./spec/differentquestions-spec.js">
+    <script type="text/javascript" src="./module/differentquestion.js"></script>
+    <!-- // <script type="text/javascript" src="./spec/differentquestions-spec.js"> -->
 
-    </script>
-    <!--<script type="text/javascript" src='./module/totalscore.js'>
-    //
-    // </script>
-    // <script type="text/javascript" src='differentquestion.js'>
-    //
-    // </script>
-    // <script type="text/javascript" src='./module/pdf.js'>
-    //
-    // </script>-->
+    <!-- </script> -->
+    <script type="text/javascript" src="./module/questions.js"></script>
+
+    <script type="text/javascript" src='./module/pdf.js'></script>
 </html>
